# modal-social-sentiment

./: .gitignore  README.md  app.py  pyproject.toml
modal_app/: __init__.py  common.py  inference_service.py  ingestion_jobs.py  processing_jobs.py  query_jobs.py  test_jobs.py  training_jobs.py  web_dashboard.py
scripts/: query_db.py
src/: __init__.py  config.py
src/app/: main.py
src/app/.streamlit/: config.toml
src/app/pages/: __init__.py  admin.py  assistant.py  dashboard.py  explorer.py
src/inference/: __init__.py  assistant.py
src/ingestion/: __init__.py  base.py  docs_ingester.py  github_ingester.py  hackernews_ingester.py  reddit_ingester.py  reddit_rss_ingester.py
src/processing/: __init__.py  embeddings.py  sentiment.py
src/storage/: __init__.py  duckdb_store.py  lancedb_store.py  schemas.py
src/training/: __init__.py  dataset.py  finetune.py
