[project]
name = "modal-social-sentiment"
version = "0.1.0"
description = "Social listening and AI support assistant for Modal, built entirely on Modal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Only modal is needed locally - everything else runs on Modal!
    "modal>=0.64.0",
]

[project.optional-dependencies]
# For local development/testing (optional)
dev = [
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "modal_app"]

[tool.ruff]
line-length = 100
target-version = "py311"
